<resources>
    <string name="app_name">ManageProducts</string>
    <string name="txvUser">User</string>
    <string name="txvPassword">Password</string>
    <string name="ckbRemember">Remember</string>
    <string name="txvForgot">Forgot your password?</string>
    <string name="btnLogin">Login</string>
    <string name="action_add_product">Add product</string>
    <string name="action_sort_alphabetically">Sort alphabetically</string>
    <string name="action_settings_general">Settings general</string>
    <string name="action_settings_account">Settings account</string>

    <!-- %1 primer argumento, %2 segundo ; $s string ; $d double... -->
    <string name="message_provinces_city">Ha seleccionado %1$s (%2$s)</string>

    <string name="txvUsername">User name</string>
    <string name="txvUserPassword">Password</string>
    <string name="txvEmail">E-mail</string>
    <string name="txvProvince">Province</string>
    <string name="txvCity">City</string>
    <string name="txvCompany">Company</string>
    <string name="txvParticular">Particular</string>
    <string name="btnSignup">Sign Up</string>

    <string name="already_exists">This product already exists</string>
</resources>
