<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:icon="@android:drawable/ic_menu_add" android:id="@+id/action_add_product"
        app:showAsAction="always"
        android:title="@string/action_add_product"/>
    <item android:icon="@android:drawable/ic_menu_sort_alphabetically" android:id="@+id/action_sort_alphabetically"
        app:showAsAction="always"
        android:title="@string/action_sort_alphabetically"/>
    <item android:id="@+id/action_settings_general"
        android:title="@string/action_settings_general"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings_account"
        android:title="@string/action_settings_account"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>